CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(differential_evolution C CXX)

FIND_PACKAGE(Threads REQUIRED)

SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -O3 -std=c++11 -lboost_program_options")
SET(CMAKE_CXX_FLAGS_DEBUG "-g")
SET(CMAKE_BUILD_TYPE Release)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR} ../../../src/binary_classifier/")
ADD_EXECUTABLE(adam adam.cpp)
TARGET_LINK_LIBRARIES(adam ${CMAKE_THREAD_LIBS_INIT})
