CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(differential_evolution C CXX)

FIND_PACKAGE(Threads REQUIRED)

SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -O2 -std=c++11")
SET(CMAKE_CXX_FLAGS_DEBUG "-g")
SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_LINK_EXECUTABLE "-lboost_serialization -lboost_program_options")

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR} ../../../src/online/")
ADD_EXECUTABLE(arow arow.cpp)
TARGET_LINK_LIBRARIES(arow ${CMAKE_LINK_EXECUTABLE})
