CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(differential_evolution C CXX)

FIND_PACKAGE(Threads REQUIRED)

SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -O2 -std=c++11 -lboost_program_options")
SET(CMAKE_CXX_FLAGS_DEBUG "-g")
SET(CMAKE_BUILD_TYPE Release)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR} ../../../src/online/")
ADD_EXECUTABLE(scw scw.cpp)
TARGET_LINK_LIBRARIES(scw ${CMAKE_THREAD_LIBS_INIT})
